force-app/main/default/objects/HFS_Features__mdt/HFS_Features__mdt.object-meta.xml
<CustomObject>
    <label>HFS Features</label>
    <pluralLabel>HFS Features</pluralLabel>
</CustomObject>