force-app/main/default/objects/HFS_Features__mdt/fields/Brand_Capture__c.field-meta.xml
<CustomField>
    <fullName>Brand_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Capture</label>
    <type>Checkbox</type>
</CustomField>