force-app/main/default/objects/HFS_Features__mdt/fields/Click_And_Collect__c.field-meta.xml
<CustomField>
    <fullName>Click_And_Collect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the Click &amp; Collect capture functionality to be used for the Village</description>
    <label>Click &amp; Collect</label>
    <type>Checkbox</type>
</CustomField>