force-app/main/default/objects/HFS_Features__mdt/fields/Collect_Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Collect_Email_Recipients__c</fullName>
    <description>Contains a list of comma-separated values with all the recipients to send the confirmation email for Click&amp;Collect registrations (in addition to the email selected for the registration).</description>
    <label>Click &amp; Collect Email Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>