force-app/main/default/objects/HFS_Features__mdt/fields/Default_Lang__c.field-meta.xml
<CustomField>
    <fullName>Default_Lang__c</fullName>
    <description>Default language used in the guest-facing screens of the HFS Experience</description>
    <inlineHelpText>This will be the default language in which the Guest-Facing screens will be shown</inlineHelpText>
    <label>Default Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>en</label>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>