force-app/main/default/objects/HFS_Features__mdt/fields/Person_Registering__c.field-meta.xml
<CustomField>
    <fullName>Person_Registering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the Person Registering Guest field should be shown in the HFS Registration page</description>
    <label>Person Registering</label>
    <type>Checkbox</type>
</CustomField>