force-app/main/default/objects/HFS_Features__mdt/fields/Privilege_Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Privilege_Terms_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privilege Terms Condition</label>
    <type>Checkbox</type>
</CustomField>