force-app/main/default/objects/HFS_Features__mdt/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the Promo_Code field should be displayed in the Registration form for the HFS Experience</description>
    <label>Promo Code Field?</label>
    <type>Checkbox</type>
</CustomField>