force-app/main/default/objects/HFS_Features__mdt/fields/Registration_Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>Registration_Email_Sender__c</fullName>
    <description>Field used to establish the Organization Wide Address that must be used when sending the registration e-mail</description>
    <label>Registration Email Sender</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>