force-app/main/default/objects/HFS_Features__mdt/fields/Registration_Location__c.field-meta.xml
<CustomField>
    <fullName>Registration_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the Registration Location field should be shown in the Registration page</description>
    <label>Registration Location</label>
    <type>Checkbox</type>
</CustomField>